--- a/src/containers/LandingPage/LandingPage.module.css
+++ b/src/containers/LandingPage/LandingPage.module.css
@@ -114,6 +114,25 @@
   border-radius: 25px;
 }
 
+.searchInput {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: -0.03em;
+  color: #000000;
+}
+
+.searchInput::placeholder {
+  color: #909090;
+}
+
 .placeholder {
   font-family: 'Inter', sans-serif;
   font-style: normal;
