--- a/src/containers/EditListingPage/EditListingWizard/EditListingDetailsPanel/EditListingDetailsForm.module.css
+++ b/src/containers/EditListingPage/EditListingWizard/EditListingDetailsPanel/EditListingDetailsForm.module.css
@@ -22,7 +22,6 @@
 }
 
 .formMargins {
-  margin-bottom: 24px;
 
   @media (--viewportMedium) {
     margin-bottom: 32px;
@@ -31,11 +30,24 @@
 
 .title {
   composes: formMargins;
+  margin-bottom: 24px;
+
+   @media (--viewportMedium) {
+    margin-bottom: 32px;
+   }
+
 }
 
 .description {
   composes: formMargins;
   flex-shrink: 0;
+  margin-bottom: 24px;
+
+  @media (--viewportMedium) {
+    margin-bottom: 32px;
+   }
+
+
 }
 
 .listingTypeSelect {
@@ -44,14 +56,18 @@
   @media (--viewportMedium) {
     margin-bottom: 32px;
   }
+
+
 }
 
 .selectedLabel {
   composes: label from global;
+  
+
 }
 .selectedValue {
   margin-top: 0;
-  margin-bottom: 6px;
+  margin-bottom: 0px;
 
   @media (--viewportMedium) {
     margin-top: 0;
@@ -69,27 +85,39 @@
   margin-bottom: 24px;
   padding: 16px;
   background-color: #f7f7f7;
-  border-left: 3px solid #e0e0e0;
-  border-radius: 4px;
+  border-left: none;
+  border-radius: 20px;
 
-  @media (--viewportMedium) {
+  @media (max-width: 1023px) {
+    border-radius: 13px;
     margin-bottom: 32px;
+
   }
 }
 
 .paymentMethodDescriptionTitle {
   margin: 0 0 8px 0;
-  font-weight: 600;
-  font-size: 14px;
+  font-weight: 700;
+  font-size: 16px;
   line-height: 18px;
-  color: #333;
+  color: #909090;
+
+@media (max-width: 1023px) {
+  font-size: 14px;
+}
+
 }
 
 .paymentMethodDescriptionText {
   margin: 0;
-  font-size: 13px;
+  font-size: 16px;
+   font-weight: 400;
   line-height: 20px;
-  color: #666;
+  color: #909090;
+
+@media (max-width: 1023px) {
+font-size: 14px;
+}
 }
 
 .buttonGroup {
@@ -99,9 +127,19 @@
   margin-bottom: 24px;
   flex-shrink: 0;
 
-  @media (--viewportLarge) {
-    margin-top: 100px;
+  @media (min-width: 1280px) {
+    margin-top: 20px;
   }
+
+   @media (min-width: 1024px) {
+    margin-top: 20px;
+  }
+
+  @media (max-width: 1023px) {
+    margin-top: 20px;
+  }
+
+
 }
 
 .backButton {
@@ -115,25 +153,38 @@
 
 .submitButton {
   flex: 1;
-  background-color: #4caf50;
-  border-color: #4caf50;
+  background-color: #FFC934;
+  border-color: #FFC934;
+  border-radius: 20px;
+  color: #000;
+  height: 60px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: -0.03em;
+box-shadow: 0 4px 3px rgba(0,0,0,.1);
 
   &:hover {
-    background-color: #45a049;
-    border-color: #45a049;
+    background-color: #000;
+    border-color: #000;
+    color: #fff;
   }
 
   &:focus {
-    background-color: #45a049;
-    border-color: #45a049;
+    background-color: #FFC934;
+    border-color: #FFC934;
+    color: #000;
   }
 
   &:disabled {
-    background-color: #a5d6a7;
-    border-color: #a5d6a7;
+    background-color: #FFC934;
+    border-color: #FFC934;
+    color: #000;
   }
 
-  @media (--viewportLarge) {
-    width: 241px;
+  @media (max-width: 1023px) {
+    height: 50px;
+    font-size: 14px;
+    border-radius: 13px;
   }
 }
