--- a/src/containers/EditListingPage/EditListingWizard/EditListingPhotosPanel/ListingImage.module.css
+++ b/src/containers/EditListingPage/EditListingWizard/EditListingPhotosPanel/ListingImage.module.css
@@ -6,6 +6,10 @@
   margin: 0;
   overflow: hidden;
   background-color: var(--colorGrey100); /* Loading BG color */
+  border-radius: 20px;
+  @media (max-width: 1023px) {
+    border-radius: 13px;
+   }
 }
 
 .wrapper {
@@ -14,16 +18,20 @@
 
 .removeImage {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1px;
+  right: 1px;
   width: 33px;
   height: 33px;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #909090;
   border: none;
   border-radius: 0;
   border-bottom-left-radius: 2px;
   cursor: pointer;
+  border-radius: 20px;
+  @media (max-width: 1023px) {
+    border-radius: 13px;
+   }
 
   & svg {
     position: absolute;
@@ -31,13 +39,13 @@
     left: 12px;
     width: 10px;
     height: 10px;
-    fill: var(--colorGrey300);
-    stroke: var(--colorGrey300);
+    fill: #fff;
+    stroke: #fff;
   }
 
   &:hover svg {
-    fill: var(--colorWhite);
-    stroke: var(--colorWhite);
+    fill: #C4E1EE;
+    stroke: #C4E1EE;
   }
 }
 
@@ -51,7 +59,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: var(--borderRadius);
+  border-radius: 20px;
+
+   @media (max-width: 1023px) {
+    border-radius: 13px;
+   }
 }
 
 .thumbnailLoading {
@@ -60,10 +72,13 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(211, 211, 211, 0.8);
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
+   
+
+  
 }
 
 .fallbackWhileDownloading {
