--- a/src/containers/EditListingPage/EditListingWizard/EditListingWizardTab.module.css
+++ b/src/containers/EditListingPage/EditListingWizard/EditListingWizardTab.module.css
@@ -2,15 +2,40 @@
 
 .panel {
   flex-grow: 1;
-  padding: 11px 24px 0 24px;
+  padding: 30px 0px 0 0px;
 
-  @media (--viewportLarge) {
+ @media (min-width: 1280px) {
     padding: 48px 36px 82px 59px;
-    border-left: 1px solid var(--colorGrey100);
-    background-color: var(--colorWhite);
+    border-left: 1px solid #909090;
+    background-color: #fff;
+    font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  line-height: 60px;
+  letter-spacing: -0.03em;
+  color: #000;
+
   }
 
-  @media (--viewportLargeWithPaddings) {
-    padding: 48px calc((100% - 1056px) / 2) 82px 59px;
-  }
+ 
+@media (min-width: 1024px) {
+    padding: 48px 48px 82px 48px;
+ border-left: 1px solid #909090;
+ background-color: #f7f7f7;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  line-height: 60px;
+  letter-spacing: -0.03em;
+  color: #000;
+  border-radius: 0 20px 20px 0;
+  
 }
+
+@media (max-width: 1023px) {
+  color: #000;
+  
+  
+}
+
+
+}
+
