--- a/src/containers/ListingPage/ListingPage.module.css
+++ b/src/containers/ListingPage/ListingPage.module.css
@@ -5,9 +5,11 @@
 
 .pageRoot {
   padding-bottom: 90px;
+  
+ 
 
-  @media (--viewportLarge) {
-    padding-bottom: 0;
+  @media (min-width: 1024px) {
+    padding: 0;
   }
 }
 
@@ -22,24 +24,27 @@
 
 .sectionHero {
   position: relative;
-  margin: 0 0 36px 0;
-
+  
+  margin: 20px 0 20px 0;
   @media (--viewportMedium) {
     margin: 0;
+   
   }
 }
 
 .heroHeight {
+   
   @media (--viewportMedium) {
     height: calc(0.075 * 100vw);
     max-height: 9vh;
     overflow-y: hidden;
+   
   }
 }
 
 .imageWrapperForSectionHero {
   composes: heroHeight;
-  background-color: var(--colorGrey100); /* Loading BG color */
+  background-color: #fff; /* Loading BG color */
 
   /* Image carousel can be opened from the image, therefore we should show a pointer */
   cursor: pointer;
@@ -49,38 +54,44 @@
   display: inline-flex;
   flex-wrap: wrap;
   padding: 0 8px;
+  
 }
 
 .actionBar {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  width: 100%;
-  color: var(--colorGrey100);
-  background-color: var(--colorGrey700);
-  z-index: 1; /* bring on top of mobile image */
-  padding: 0 24px;
+  
 
+  color: #000;
+  background-color: #f7f7f7;
+
+    box-shadow: 0 4px 3px rgba(0,0,0,.05);
+  z-index: 1; /* bring on top of mobile image */
+  padding: 0 20px;
+  border-radius: 13px;
   /* Action bar prevents the image click events going to the parent and
    should not show a pointer */
   cursor: initial;
 
-  @media (--viewportMedium) {
+  @media (min-width: 1024px) {
     flex-direction: row;
-    border-radius: var(--borderRadiusMedium);
+    border-radius: 20px;
+   
+   
   }
 }
 
 .actionBarForProductLayout {
-  margin: 0;
-  width: 100%;
+  margin: 20px;
+  width: auto;
 
   &:nth-child(even) {
-    margin-top: 24px;
+    margin-top: 20px;
   }
 
   @media (--viewportMedium) {
-    margin: 24px 0 24px 0;
+    margin: 20px 0 20px 0;
     width: 100%;
   }
 
@@ -145,6 +156,7 @@
   @media (--viewportMedium) {
     width: auto;
     margin: 20px 0 20px 15px;
+    
   }
 }
 
@@ -179,41 +191,59 @@
 }
 
 .ownListingTextPendingApproval {
-  color: var(--colorAttention);
+  color: #000;
+  font-size: 16px;
+   margin: 20px 0;
+   letter-spacing: -0.03em;
+
+   @media (max-width: 1023px) {
+font-size: 14px;
+margin-bottom: -5px;
+ margin: 10px 0 0 0;
+   }
 }
 
 .closedListingText {
-  composes: h4 from global;
+  font-size: 16px ;
+
   margin: 14px 12px 11px 24px;
   text-align: center;
-  width: 100%;
+  width: 100%; 
+  letter-spacing: -0.03em;
 
-  @media (--viewportMedium) {
+  @media (max-width: 1023px) {
+    font-size: 14px ;
     margin: 25px 12px 22px 24px;
   }
 }
 
 .addPayoutDetails,
 .editListingLink {
-  composes: h5 from global;
-  margin: 23px 24px 11px 0px;
-  color: var(--colorGrey100);
+  font-size: 16px;
+  margin: 20px 0;
+  color: #909090 !important;
+  letter-spacing: -0.03em;
 
   transition: var(--transitionStyleButton);
 
   &:hover {
-    color: var(--colorWhite);
+    color: #000 !important;
     text-decoration: none;
   }
 
-  @media (--viewportMedium) {
-    margin: 24px 0 0 0;
+  @media (max-width: 1023px) {
+    font-size: 14px;
+    margin: 10px 0 10px 0px;
+    
   }
 
   &.CTAEnabled {
+  
     margin: 24px 0 0 0;
   }
 }
+
+
 
 .missingPayoutDetailsText {
   color: var(--colorAttention);
@@ -227,16 +257,23 @@
 
 .editIcon {
   margin: -6px 7px 0 0;
+  color: #909090 !important;
+  &:hover {
+    color: #000 !important;
+  }
 }
 
 .rootForImage {
   composes: heroHeight;
   width: 100%;
+  
   transition: var(--transitionStyleButton);
 
-  @media (--viewportMedium) {
+  @media (max-width: 1023px) {
     object-fit: cover;
     border-radius: var(--borderRadius);
+    padding: 0 20px;
+
 
     &:hover {
       transform: scale(1.005);
@@ -251,7 +288,7 @@
   /* Position and dimensions */
   position: absolute;
   bottom: 19px;
-  right: 24px;
+  right: 20px;
 }
 
 .carouselModalScrollLayer {
@@ -270,14 +307,14 @@
     width: 100%;
     max-width: var(--contentMaxWidth);
     margin: 0 auto;
-    padding: 0 24px;
+    padding: 0 20px;
     display: flex;
     position: relative;
   }
 
   @media (--viewportLarge) {
-    max-width: calc(var(--contentMaxWidth) + 72px);
-    padding: 0 36px;
+    max-width: calc(var(--contentMaxWidth) + 40px);
+    padding: 0 20px;
     margin: 0 auto 117px;
   }
 
@@ -299,7 +336,8 @@
   }
 }
 
-.orderColumnForProductLayout {
+.orderColumnForProductLayout { /* убирает с правой колонки "пока нет откликов" */
+
   @media (--viewportMedium) {
   }
   @media (--viewportLarge) {
@@ -316,7 +354,7 @@
   @media (--viewportMedium) {
     width: 100%;
     max-width: var(--contentMaxWidth);
-    padding: 0 24px 0 24px;
+    padding: 0 20px;
     margin: 0 auto 56px auto;
   }
 
@@ -324,8 +362,8 @@
     display: flex;
     flex-direction: row;
     max-width: unset;
-    width: min(calc(var(--contentMaxWidth) + 72px), 100vw);
-    padding: 64px 36px 0 36px;
+    width: min(calc(var(--contentMaxWidth) + 40px), 100vw);
+    padding: 64px 20px 0 20px;
     margin: 0 auto 117px auto;
   }
 }
@@ -349,6 +387,7 @@
     flex-shrink: 0;
     flex-grow: 1;
   }
+
 }
 
 .orderColumnForHeroLayout {
@@ -366,48 +405,53 @@
 }
 
 .orderPanel {
+ display: none;
   /* Note: panel height might be too much on small viewport - hence min-height */
   @media (--viewportLarge) and (min-height: 950px) {
     position: sticky;
     top: 108px;
+   
   }
 }
 
 .productOrderPanel {
-  @media (--viewportLarge) {
+  display: none;
+
+  @media (min-width: 1023px) {
     display: block;
-  }
-  /* Note: panel height might be too much on small viewport - hence min-height */
-  @media (--viewportLarge) and (min-height: 950px) {
-    position: sticky;
-    top: 108px;
-  }
-  &.imagesEnabled {
-    @media (--viewportLarge) {
-      margin-top: 24px;
-    }
   }
 }
 
 .orderPanelTitle {
   /* Font */
-  font-weight: var(--fontWeightBold);
-
+  
+color: #000;
+ font-size: 25px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
   /* Layout */
   width: 100%;
   margin-top: 0;
   margin-bottom: 0;
+
+  @media (min-width: 767px) {
+font-size: 35px;
+margin-bottom: 10px;
+  }
+   @media (min-width: 1024px) {
+font-size: 25px;
+   }
+
+
   &.titleMarginForOwnListingNoImage {
     margin-top: 100px;
-    @media (--viewportMedium) {
-      margin-top: 0;
+   
     }
-  }
 }
 
 .sectionAvatar {
   /* Position (over the listing image)*/
-  margin-left: 24px;
+  margin-left: 20px;
   margin-top: -31px;
 
   /* Rendering context to the same lavel as listing image */
@@ -451,13 +495,14 @@
     flex-shrink: 0;
     margin: 0 48px 0 0;
     padding: 0;
+    color: #000;
   }
 }
 
 .desktopPriceValue {
   /* Font */
   composes: marketplaceModalTitleStyles from global;
-  color: var(--marketplaceColor);
+  color: #000;
 
   @media (--viewportMedium) {
     margin-top: 0;
@@ -468,7 +513,7 @@
 .desktopPerUnit {
   /* Font */
   composes: h5 from global;
-  color: var(--colorGrey700);
+  color: #000;
 
   @media (--viewportMedium) {
     margin-top: 0;
@@ -478,7 +523,7 @@
 
 .heading {
   margin-bottom: 33px;
-  padding: 0 24px;
+  padding: 0;
 
   @media (--viewportMedium) {
     margin-bottom: 0;
@@ -489,7 +534,7 @@
 .title {
   /* Font */
   composes: marketplaceModalTitleStyles from global;
-  color: var(--colorGrey700);
+  color: #000;
 
   /* Layout */
   width: 100%;
@@ -517,7 +562,8 @@
 
 .authorNameLink {
   composes: textSmall from global;
-  color: var(--colorGrey700);
+  color: #000;
+  letter-spacing: -0.03em;
 }
 
 .contactWrapper {
@@ -541,7 +587,7 @@
   border: none;
 
   /* Colors */
-  color: var(--marketplaceColor);
+  color: #FFC934;
 
   /* Text size should be inherited */
   text-decoration: none;
@@ -563,7 +609,7 @@
 }
 
 .sectionText {
-  padding: 0 24px;
+  padding: 0 20px;
   margin-bottom: 36px;
 
   @media (--viewportMedium) {
@@ -575,22 +621,30 @@
 .sectionHeading,
 .sectionHeadingWithExtraMargin {
   /* Font for sections titles */
-  composes: p from global;
+  
   padding: 0;
-  font-weight: var(--fontWeightBold);
-
+  font-size: 35px;
+  font-weight: 700;
+color: #000 !important;
   margin-top: 0;
   margin-bottom: 12px;
+  letter-spacing: -0.03em;
 
-  @media (--viewportMedium) {
+ @media (max-width: 1023px) {
     margin-top: 0;
     margin-bottom: 8px;
+    font-size: 35px;
   }
+
+  @media (max-width: 767px) {
+    font-size: 25px;
+}
 }
 
 .sectionHeadingWithExtraMargin {
   @media (--viewportMedium) {
     margin-bottom: 16px;
+  
   }
 }
 
@@ -611,19 +665,24 @@
 .ingress {
   composes: p from global;
   margin: 0;
-
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: -0.03em;
+  color: #000;
   /* Preserve newlines, but collapse other whitespace */
   white-space: pre-line;
 
-  @media (--viewportMedium) {
+  @media (max-width: 1023px) {
     margin: 0;
+    font-size: 14px;
   }
 }
 
 .sectionDetails,
 .sectionMultiEnum,
 .sectionEmbeddedYoutubeVideo {
-  padding: 0 24px;
+  padding: 0 20px;
   margin-bottom: 32px;
 
   @media (--viewportMedium) {
@@ -633,8 +692,9 @@
 }
 
 .sectionMap {
-  padding: 0 24px;
+  padding: 0 20px;
   margin-bottom: 35px;
+  
 
   @media (--viewportMedium) {
     padding: 0;
@@ -644,7 +704,7 @@
 
 .sectionReviews,
 .sectionAuthor {
-  padding: 0 24px;
+  padding: 0 20px;
   margin-top: 42px;
   scroll-margin-top: calc(var(--topbarHeight) + 24px);
 
@@ -661,6 +721,7 @@
 .details {
   padding-bottom: 1px;
   margin: 0;
+  
 }
 
 .detailsRow {
@@ -668,18 +729,24 @@
   justify-content: space-between;
   width: 100%;
   list-style: none;
-  font-weight: var(--fontWeightRegular);
-  line-height: 24px;
-  padding: 7px 0px 10px;
+  font-weight: 400;
+  line-height: 17px;
+  padding: 7px 0px 7px 0;
   gap: 8px;
+  font-size: 14px;
+  color: #000;
+  letter-spacing: -0.03em;
+  font-family: 'Inter', sans-serif;
 
   &:not(:last-child) {
-    border-bottom: 1px solid var(--colorGrey100);
+    border-bottom: 1px solid #909090;
   }
 
-  @media (--viewportMedium) {
-    padding: 5px 0 2px 0;
-    line-height: 32px;
+  @media (min-width: 768px) {
+    padding: 0px 0 7px 0;
+    line-height: 24px;
+    font-size: 16px;
+
   }
 }
 
@@ -710,7 +777,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 24px;
+  padding: 20px;
   background-color: var(--colorWhite);
 
   @media (--viewportMedium) {
@@ -722,24 +789,31 @@
 
 .map {
   /* Dimensions: Map takes all available space from viewport (excludes action button and section title) */
-  height: calc(100vh - 193px);
+  height: calc(100vh - 103px);
   width: 100%;
 
   /* Static map: dimensions are 640px */
-  max-width: 640px;
-  max-height: 640px;
-  background-color: #eee;
+  
+  max-height: 200px;
+  background-color: #f7f7f7;
   padding: 0;
   border: 0;
   cursor: pointer;
+  border-radius: 20px;
+  overflow: hidden;
 
-  @media (--viewportMedium) {
+  @media (max-width: 767px) {
+  margin-top: 20px;
+  }
+  @media (max-width: 1023px) {
     height: 75vh;
+    border-radius: 13px;
   }
 
   @media (--viewportLarge) {
     height: 417px;
     margin-bottom: 7px;
+  
   }
 }
 
@@ -749,8 +823,8 @@
 }
 
 .productGallery {
-  margin: 0 0 36px 0;
-
+  margin: 0 0 45px 0;
+  
   @media (--viewportMedium) {
     margin: 24px 0 48px 0;
   }
@@ -761,23 +835,23 @@
 }
 
 .mobileHeading {
-  margin: 0 24px 24px 24px;
+ margin: 0;
 
-  @media (--viewportMedium) {
-    margin: 0 0 24px 0;
-  }
-
-  @media (--viewportLarge) {
+@media (max-width: 767px) {
+padding: 0 20px;
+}
+ @media (min-width: 1024px) {
     display: none;
+    padding: 0 !important;
   }
 }
 
 .noListingImageHeading {
-  margin: 0 24px 24px 24px;
+  margin: 0 20px 20px 20px;
   padding-top: 36px;
 
   @media (--viewportMedium) {
-    margin: 0 0 24px 0;
+    margin: 0 0 20px 0;
   }
 }
 
@@ -801,6 +875,7 @@
   display: none;
   @media (--viewportLarge) {
     display: block;
+    
   }
 }
 
@@ -832,3 +907,6 @@
   width: 100%;
   height: 100%;
 }
+
+
+
