--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -118,6 +118,10 @@
   }
 }
 
+.completedListings {
+  margin-top: 32px;
+}
+
 .listingsTitle {
   color: var(--colorGrey700);
   margin-bottom: 0;
@@ -198,6 +202,13 @@
     margin-bottom: 0;
   }
 }
+
+.emptyState {
+  margin-top: 18px;
+  font-size: 14px;
+  color: var(--colorGrey700);
+}
+
 
 .desktopReviewsWrapper {
   max-width: 600px;
