--- a/src/containers/TransactionPage/TransactionPage.module.css
+++ b/src/containers/TransactionPage/TransactionPage.module.css
@@ -83,18 +83,26 @@
 
 .closeTaskModalContent {
   padding: 32px 24px;
-  max-width: 420px;
+  max-width: 500px;
   text-align: center;
+  background-color: var(--colorWhite);
+  border-radius: 8px;
 }
 
 .closeTaskModalTitle {
   composes: h3 from global;
-  margin: 0 0 12px 0;
+  margin: 0 0 16px 0;
+  color: var(--colorBlack);
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .closeTaskModalText {
   composes: marketplaceSmallFontStyles from global;
   margin: 0;
+  color: var(--colorGrey700);
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .closeTaskModalError {
